--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -544,36 +544,36 @@
 
 	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
@@ -582,16 +582,16 @@
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -814,6 +814,13 @@
 	"mmorpg.talent.ms_all_in": "Stare of Abyss",
 	"mmorpg.talent.ms_energy_regen_big": "Major Magic Shield",
 	"mmorpg.talent.necromancer_class": "Necromancer",
+	"mmorpg.talent.necromancer_class_0": "Minion Lord",
+	"mmorpg.talent.necromancer_class_1": "Skeletal Shield",
+	"mmorpg.talent.necromancer_class_2": "Infinite Army",
+	"mmorpg.talent.necromancer_class_3": "Swift Death",
+	"mmorpg.talent.necromancer_class_4": "Flesh Army",
+	"mmorpg.talent.necromancer_class_5": "Bulwark of Rot",
+	"mmorpg.talent.necromancer_class_6": "Sacrificial Minions",
 	"mmorpg.talent.necromantic_defenses": "Necromantic Defenses",
 	"mmorpg.talent.nether_enthusiast": "Nether Enthusiast",
 	"mmorpg.talent.performer": "Performer",
@@ -968,8 +975,8 @@
 	"mmorpg.stat.block_per_endurance_charge": "Block Chance per Endurance Charge",
 	"mmorpg.stat.blood": "Blood",
 	"mmorpg.stat.blood_leech_cap": "Blood Leech Cap",
-	"mmorpg.stat.blood_on_is_blocked": "\u00A77Gain Blood on Block",
-	"mmorpg.stat.blood_on_is_dodged": "\u00A77Gain Blood on Dodge",
+	"mmorpg.stat.blood_on_is_blocked": "\u00A77Gain \u00A7a[VAL1]\u00A77 Blood on Block",
+	"mmorpg.stat.blood_on_is_dodged": "\u00A77Gain \u00A7a[VAL1]\u00A77 Blood on Dodge",
 	"mmorpg.stat.blood_on_kill": "Blood on Kill",
 	"mmorpg.stat.blood_per_10_strength": "\u00A7a[VAL1] \u00A74\u2764 Blood\u00A77 per 10 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.blood_user": "\u00A77You now use \u00A74\u2764 Blood\u00A77 instead of \u00A79\u262F Mana\u00A77",
@@ -1106,8 +1113,8 @@
 	"mmorpg.stat.energy": "Energy",
 	"mmorpg.stat.energy_leech_cap": "Energy Leech Cap",
 	"mmorpg.stat.energy_on_hit_hit": "Energy on Hit",
-	"mmorpg.stat.energy_on_is_blocked": "\u00A77Gain Energy on Block",
-	"mmorpg.stat.energy_on_is_dodged": "\u00A77Gain Energy on Dodge",
+	"mmorpg.stat.energy_on_is_blocked": "\u00A77Gain \u00A7a[VAL1]\u00A77 Energy on Block",
+	"mmorpg.stat.energy_on_is_dodged": "\u00A77Gain \u00A7a[VAL1]\u00A77 Energy on Dodge",
 	"mmorpg.stat.energy_on_kill": "Energy on Kill",
 	"mmorpg.stat.energy_per_10_dexterity": "\u00A7a[VAL1] \u00A7a\u262F Energy\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
 	"mmorpg.stat.energy_per_10_mana": "\u00A7a[VAL1] \u00A7a\u262F Energy\u00A77 per 10 \u00A79\u262F Mana\u00A77",
@@ -1185,8 +1192,8 @@
 	"mmorpg.stat.health": "Health",
 	"mmorpg.stat.health_leech_cap": "Health Leech Cap",
 	"mmorpg.stat.health_on_hit_hit": "Health on Hit",
-	"mmorpg.stat.health_on_is_blocked": "\u00A77Gain Health on Block",
-	"mmorpg.stat.health_on_is_dodged": "\u00A77Gain Health on Dodge",
+	"mmorpg.stat.health_on_is_blocked": "\u00A77Gain \u00A7a[VAL1]\u00A77 Health on Block",
+	"mmorpg.stat.health_on_is_dodged": "\u00A77Gain \u00A7a[VAL1]\u00A77 Health on Dodge",
 	"mmorpg.stat.health_on_kill": "Health on Kill",
 	"mmorpg.stat.health_per_10_dexterity": "\u00A7a[VAL1] \u00A7c\u2764 Health\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
 	"mmorpg.stat.health_per_10_intelligence": "\u00A7a[VAL1] \u00A7c\u2764 Health\u00A77 per 10 \u00A7b\u2605 Intelligence\u00A77",
@@ -1361,8 +1368,8 @@
 	"mmorpg.stat.magic_shield_heal": "Magic Shield Healing",
 	"mmorpg.stat.magic_shield_leech_cap": "Magic Shield Leech Cap",
 	"mmorpg.stat.magic_shield_on_hit_hit": "Magic Shield on Hit",
-	"mmorpg.stat.magic_shield_on_is_blocked": "\u00A77Gain Magic Shield on Block",
-	"mmorpg.stat.magic_shield_on_is_dodged": "\u00A77Gain Magic Shield on Dodge",
+	"mmorpg.stat.magic_shield_on_is_blocked": "\u00A77Gain \u00A7a[VAL1]\u00A77 Magic Shield on Block",
+	"mmorpg.stat.magic_shield_on_is_dodged": "\u00A77Gain \u00A7a[VAL1]\u00A77 Magic Shield on Dodge",
 	"mmorpg.stat.magic_shield_on_kill": "Magic Shield on Kill",
 	"mmorpg.stat.magic_shield_per_10_dodge": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A72\u2605 Dodge Rating\u00A77",
 	"mmorpg.stat.magic_shield_per_10_mana": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A79\u262F Mana\u00A77",
@@ -1375,8 +1382,8 @@
 	"mmorpg.stat.mana_cost": "Mana Cost",
 	"mmorpg.stat.mana_leech_cap": "Mana Leech Cap",
 	"mmorpg.stat.mana_on_hit_hit": "Mana on Hit",
-	"mmorpg.stat.mana_on_is_blocked": "\u00A77Gain Mana on Block",
-	"mmorpg.stat.mana_on_is_dodged": "\u00A77Gain Mana on Dodge",
+	"mmorpg.stat.mana_on_is_blocked": "\u00A77Gain \u00A7a[VAL1]\u00A77 Mana on Block",
+	"mmorpg.stat.mana_on_is_dodged": "\u00A77Gain \u00A7a[VAL1]\u00A77 Mana on Dodge",
 	"mmorpg.stat.mana_on_kill": "Mana on Kill",
 	"mmorpg.stat.mana_per_10_dexterity": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
 	"mmorpg.stat.mana_per_10_intelligence": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7b\u2605 Intelligence\u00A77",
@@ -1507,7 +1514,7 @@
 	"mmorpg.stat.poison_strength": "Poison Strength",
 	"mmorpg.stat.positive_eff_dur_u_cast": "Positive Effect Duration",
 	"mmorpg.stat.power_charge_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% Chance to get Power Charge On Hit",
-	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause an Ignited Exposion on kiling an enemy.",
+	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause a Profane Exposion on kiling a Cursed Enemy.",
 	"mmorpg.stat.proc_shatter": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter when you shatter a bone-chilled enemy. Also gives you Essence of Frost",
 	"mmorpg.stat.proc_shatter_max_frost": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter while at max Essence of Frost charges. This only works on spells have the Shatter tag.",
 	"mmorpg.stat.proj_dmg_received": "Projectile Damage Receieved",
