--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -544,54 +544,54 @@
 
 	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -673,6 +673,13 @@
 	"mmorpg.talent.aura_effect_big": "Major Augment Effect",
 	"mmorpg.talent.axe_damage_big": "Major Axe Damage",
 	"mmorpg.talent.battlemage_class": "Battlemage",
+	"mmorpg.talent.battlemage_class_0": "Illusion of Defense",
+	"mmorpg.talent.battlemage_class_1": "Balance",
+	"mmorpg.talent.battlemage_class_2": "Essence Regeneration",
+	"mmorpg.talent.battlemage_class_3": "Elemental Overlord",
+	"mmorpg.talent.battlemage_class_4": "Battle of Wit",
+	"mmorpg.talent.battlemage_class_5": "Resolve",
+	"mmorpg.talent.battlemage_class_6": "Final Stand",
 	"mmorpg.talent.bleed_chance_big": "Major Bleed Chance",
 	"mmorpg.talent.bleed_damage_big": "Major Bleed Damage",
 	"mmorpg.talent.bleed_duration_big": "Major Bleed Duration",
@@ -1041,6 +1048,7 @@
 	"mmorpg.stat.crit_dmg_per_power_charge": "Crit Damage per Power Charge",
 	"mmorpg.stat.critical_damage": "Crit Damage",
 	"mmorpg.stat.critical_hit": "Crit Chance",
+	"mmorpg.stat.critical_hit_per_10_strength": "\u00A7a[VAL1] \u00A7e\u2694 Crit Chance\u00A77 per 10 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.crossbow_damage": "Crossbow Damage",
 	"mmorpg.stat.curse_cast_time": "Curse Cast Time",
 	"mmorpg.stat.curse_cdr": "Curse Spell Cooldown Reduction",
@@ -1217,6 +1225,7 @@
 	"mmorpg.stat.husbandry_medium_drop_bonus": "Rare Drops",
 	"mmorpg.stat.husbandry_misc_drop_bonus": "Misc Drops",
 	"mmorpg.stat.husbandry_triple_drop": "Triple Drop Chance",
+	"mmorpg.stat.ignore_ele_res": "Criticals Ignore Elemental Resists",
 	"mmorpg.stat.immobilizing_eff_dur_u_cast": "Immobilizing Effect Duration",
 	"mmorpg.stat.inc_aoe": "Area of Effect",
 	"mmorpg.stat.inc_effect_of_charge_buff_given": "Charge Effect Strength",
@@ -1376,6 +1385,7 @@
 	"mmorpg.stat.magic_shield_per_sec": "Magic Shield Per Regen",
 	"mmorpg.stat.magic_shield_reg_aura_cost": "\u00A77MS Regen Cost",
 	"mmorpg.stat.magic_shield_regen": "Magic Shield Regen",
+	"mmorpg.stat.magic_shield_regen_per_1_health_regen": "\u00A7a[VAL1] \u00A7b\u2605 Magic Shield Regen\u00A77 per 1 \u00A7b\u2605 Health Regen\u00A77",
 	"mmorpg.stat.magic_spell_dmg": "Magic Damage",
 	"mmorpg.stat.magic_spell_dmg_taken": "Magic Damage Taken",
 	"mmorpg.stat.mana": "Mana",
@@ -1385,7 +1395,9 @@
 	"mmorpg.stat.mana_on_is_blocked": "\u00A77Gain \u00A7a[VAL1]\u00A77 Mana on Block",
 	"mmorpg.stat.mana_on_is_dodged": "\u00A77Gain \u00A7a[VAL1]\u00A77 Mana on Dodge",
 	"mmorpg.stat.mana_on_kill": "Mana on Kill",
+	"mmorpg.stat.mana_per_10_armor": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A79\u2605 Armor\u00A77",
 	"mmorpg.stat.mana_per_10_dexterity": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
+	"mmorpg.stat.mana_per_10_health": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7c\u2764 Health\u00A77",
 	"mmorpg.stat.mana_per_10_intelligence": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7b\u2605 Intelligence\u00A77",
 	"mmorpg.stat.mana_per_10_strength": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.mana_per_sec": "Mana Per Regen",
@@ -1514,7 +1526,7 @@
 	"mmorpg.stat.poison_strength": "Poison Strength",
 	"mmorpg.stat.positive_eff_dur_u_cast": "Positive Effect Duration",
 	"mmorpg.stat.power_charge_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% Chance to get Power Charge On Hit",
-	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause a Profane Exposion on kiling a Cursed Enemy.",
+	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause an Ignited Exposion on kiling an enemy.",
 	"mmorpg.stat.proc_shatter": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter when you shatter a bone-chilled enemy. Also gives you Essence of Frost",
 	"mmorpg.stat.proc_shatter_max_frost": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter while at max Essence of Frost charges. This only works on spells have the Shatter tag.",
 	"mmorpg.stat.proj_dmg_received": "Projectile Damage Receieved",
@@ -2813,6 +2825,7 @@
 	"mmorpg.stat_desc.husbandry_medium_drop_bonus": "Prof drops are split into categories, this stat increases the droprate of one such",
 	"mmorpg.stat_desc.husbandry_misc_drop_bonus": "Prof drops are split into categories, this stat increases the droprate of one such",
 	"mmorpg.stat_desc.husbandry_triple_drop": "Chance for profession to triple the drop, if it happens",
+	"mmorpg.stat_desc.ignore_ele_res": "Ignored resists means resistance stat won't proc, means penetration doesn't boost damage, but neither do enemy resists work.",
 	"mmorpg.stat_desc.inc_aoe": "Spell aoe effects will be larger",
 	"mmorpg.stat_desc.inc_effect_of_charge_buff_given": "Increases the stat strength of effects you give",
 	"mmorpg.stat_desc.inc_effect_of_charge_buff_on_you": "Increases the stat strength of effects you receive",
