--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -586,40 +586,40 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
@@ -630,8 +630,8 @@
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
@@ -701,6 +701,13 @@
 	"mmorpg.talent.cdr_big": "Major Cooldown Reduction",
 	"mmorpg.talent.chain_damage_big": "Major Chaining Damage",
 	"mmorpg.talent.champion_class": "Champion",
+	"mmorpg.talent.champion_class_0": "Warrior's Shield",
+	"mmorpg.talent.champion_class_1": "Frenzied Assault",
+	"mmorpg.talent.champion_class_2": "Blood Splatter",
+	"mmorpg.talent.champion_class_3": "Cruel Fate",
+	"mmorpg.talent.champion_class_4": "Energized Defense",
+	"mmorpg.talent.champion_class_5": "Cunning",
+	"mmorpg.talent.champion_class_6": "Quick Rage",
 	"mmorpg.talent.chaos_any_wep_damage_big": "Major Chaos Weapon Damage",
 	"mmorpg.talent.chaos_dot_damage_big": "Major Chaos Damage Over Time",
 	"mmorpg.talent.chaos_penetration_big": "Major Chaos Penetration",
@@ -872,6 +879,13 @@
 	"mmorpg.talent.projectile_damage_big": "Major Projectile Damage",
 	"mmorpg.talent.projection": "Projection",
 	"mmorpg.talent.raider_class": "Raider",
+	"mmorpg.talent.raider_class_0": "Frenzied Evasion",
+	"mmorpg.talent.raider_class_1": "Frenzied Defense",
+	"mmorpg.talent.raider_class_2": "Turning Chance",
+	"mmorpg.talent.raider_class_3": "Dexterous",
+	"mmorpg.talent.raider_class_4": "Resistant",
+	"mmorpg.talent.raider_class_5": "Pain Tolerance",
+	"mmorpg.talent.raider_class_6": "Quickness",
 	"mmorpg.talent.ranger": "Ranger",
 	"mmorpg.talent.reckless_defender": "Reckless Defender",
 	"mmorpg.talent.refined_taste": "Refined Taste",
@@ -1107,6 +1121,7 @@
 	"mmorpg.stat.dmg_when_target_near_full_hp": "Damage to near Full Health Targets",
 	"mmorpg.stat.dodge": "Dodge Rating",
 	"mmorpg.stat.dodge_aura_cost": "\u00A77Dodge Cost",
+	"mmorpg.stat.dodge_er_power_charge": "Dodge per Frenzy Charge",
 	"mmorpg.stat.dodge_per_10_magic_shield": "\u00A7a[VAL1] \u00A72\u2605 Dodge Rating\u00A77 per 10 \u00A7d\u2764 Magic Shield\u00A77",
 	"mmorpg.stat.dot_dmg": "Damage Over Time",
 	"mmorpg.stat.dot_lifesteal": "Damage Over Time Lifesteal",
@@ -1292,6 +1307,7 @@
 	"mmorpg.stat.learn_awaken_mana": "Learn Inspiration",
 	"mmorpg.stat.learn_black_hole": "Learn    Black Hole",
 	"mmorpg.stat.learn_blizzard": "Learn Blizzard",
+	"mmorpg.stat.learn_blood_explosion": "Learn Blood Explosion",
 	"mmorpg.stat.learn_bone_shatter": "Learn Bone Shatter",
 	"mmorpg.stat.learn_boomerang": "Learn Boomerang",
 	"mmorpg.stat.learn_chain_lightning": "Learn Chain Lightning",
@@ -1469,6 +1485,7 @@
 	"mmorpg.stat.more_food_stats": "\u00A77You gain \u00A7a[VAL1]\u00A77% more stats through Food buffs.",
 	"mmorpg.stat.more_threat_on_take_dmg": "\u00A77You generate \u00A7a[VAL1]\u00A77% more threat when taking damage.",
 	"mmorpg.stat.move_speed": "Move Speed",
+	"mmorpg.stat.move_speed_per_endurance_charge": "Move Speed per Endurance Charge",
 	"mmorpg.stat.movement_cast_time": "Movement Cast Time",
 	"mmorpg.stat.movement_cdr": "Movement Spell Cooldown Reduction",
 	"mmorpg.stat.movement_spell_dmg": "Movement Damage",
@@ -1553,7 +1570,10 @@
 	"mmorpg.stat.poison_strength": "Poison Strength",
 	"mmorpg.stat.positive_eff_dur_u_cast": "Positive Effect Duration",
 	"mmorpg.stat.power_charge_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% Chance to get Power Charge On Hit",
-	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause a Profane Exposion on kiling a Cursed Enemy.",
+	"mmorpg.stat.proc_blood_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause a bloody Explosion on killing an enemy.",
+	"mmorpg.stat.proc_ignite_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause an Ignited Explosion on killing an enemy.",
+	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause a Profane Explosion on killing a Cursed Enemy.",
+	"mmorpg.stat.proc_profane_explosion_any": "\u00A77\u00A7a[VAL1]\u00A77% Chance to cause a Profane Exposion on kill.",
 	"mmorpg.stat.proc_shatter": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter when you shatter a bone-chilled enemy. Also gives you Essence of Frost",
 	"mmorpg.stat.proc_shatter_max_frost": "\u00A77\u00A7a[VAL1]\u00A77% Chance to casts Bone Shatter while at max Essence of Frost charges. This only works on spells have the Shatter tag.",
 	"mmorpg.stat.proj_dmg_received": "Projectile Damage Receieved",
@@ -1968,6 +1988,7 @@
 	"mmorpg.spell.awaken_mana": "Inspiration",
 	"mmorpg.spell.black_hole": "   Black Hole",
 	"mmorpg.spell.blizzard": "Blizzard",
+	"mmorpg.spell.blood_explosion": "Blood Explosion",
 	"mmorpg.spell.bone_shatter": "Bone Shatter",
 	"mmorpg.spell.boomerang": "Boomerang",
 	"mmorpg.spell.chain_lightning": "Chain Lightning",
@@ -2691,7 +2712,7 @@
 	"mmorpg.stat_desc.bleed_proc_chance": "Procs the accumulated damage of the ailment",
 	"mmorpg.stat_desc.bleed_resistance": "Protects against the ailment, if it's 100%, it acts as immunity.",
 	"mmorpg.stat_desc.bleed_strength": "Increases the effect, if it's a DOT, increases damage, if it's not, decreases the amount of damage needed to fully apply it.",
-	"mmorpg.stat_desc.block_chance": "Chance to passively block damage, requires a shield in the offhand, but don't have to activate it.",
+	"mmorpg.stat_desc.block_chance": "Chance to passively block hit damage",
 	"mmorpg.stat_desc.block_per_endurance_charge": "Adds stats depending on how many effect stacks you have currently.",
 	"mmorpg.stat_desc.blood": "Blood is a unique resource that works like mana.",
 	"mmorpg.stat_desc.blood_on_kill": "Leeches resource every time you kill an enemy. This is capped as all other leech",
@@ -2762,6 +2783,7 @@
 	"mmorpg.stat_desc.dmg_when_target_is_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.dmg_when_target_near_full_hp": "70% health or above..",
 	"mmorpg.stat_desc.dodge": "Chance to ignore attack damage",
+	"mmorpg.stat_desc.dodge_er_power_charge": "Adds stats depending on how many effect stacks you have currently.",
 	"mmorpg.stat_desc.dot_dmg": "Increases dmg of effects that do damage over time, like burn",
 	"mmorpg.stat_desc.dot_lifesteal": "Restore % of DoT damage as health.",
 	"mmorpg.stat_desc.ele_added_dmg": "Adds x element damage on hit.  It's multiplied by damage effectiveness of the hit",
@@ -2932,6 +2954,7 @@
 	"mmorpg.stat_desc.missile_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.missile_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
 	"mmorpg.stat_desc.move_speed": "Increase vanilla attribute.",
+	"mmorpg.stat_desc.move_speed_per_endurance_charge": "Adds stats depending on how many effect stacks you have currently.",
 	"mmorpg.stat_desc.movement_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.movement_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.movement_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
@@ -2949,7 +2972,10 @@
 	"mmorpg.stat_desc.poison_proc_chance": "Procs the accumulated damage of the ailment",
 	"mmorpg.stat_desc.poison_resistance": "Protects against the ailment, if it's 100%, it acts as immunity.",
 	"mmorpg.stat_desc.poison_strength": "Increases the effect, if it's a DOT, increases damage, if it's not, decreases the amount of damage needed to fully apply it.",
+	"mmorpg.stat_desc.proc_blood_explosion": "This has a short cooldown. You can see the whole spell stats in the Ingame Library",
+	"mmorpg.stat_desc.proc_ignite_explosion": "This has a short cooldown. You can see the whole spell stats in the Ingame Library",
 	"mmorpg.stat_desc.proc_profane_explosion": "This has a short cooldown. You can see the whole spell stats in the Ingame Library",
+	"mmorpg.stat_desc.proc_profane_explosion_any": "This has a short cooldown. You can see the whole spell stats in the Ingame Library",
 	"mmorpg.stat_desc.proj_dmg_received": "Affects projectile damage, includes projectile spells like fireballs, and ranged basic attacks.",
 	"mmorpg.stat_desc.projectile_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.projectile_cdr": "Reduces spell cooldown of spells with the tag.",
@@ -3040,6 +3066,7 @@
 	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
 	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole] \u00A75\u2600 Chaos\u00A77 Damage when it expires.",
 	"spell.desc.blizzard": "Create a Cloud that sends cold waves, damaging enemies for [calc:blizzard] \u00A7b\u2600 Cold\u00A77 Damage",
+	"spell.desc.blood_explosion": "Causes a bloody explosion dealing [calc:blood_explosion] \u00A76\u2600 Physical\u00A77 Damage",
 	"spell.desc.bone_shatter": "Shatters the ice dealing [calc:shatter] \u00A7b\u2600 Cold\u00A77 Damage and same amount of Physical Damage.",
 	"spell.desc.boomerang": "Strike enemies with a projectile that deals [calc:boomerang] \u00A76\u2600 Physical\u00A77 Damage",
 	"spell.desc.chain_lightning": "Strike enemies with chaining lightning that deals [calc:lightning_spear] \u00A7a\u2600 Lightning\u00A77 Damage",
